NHSO-4250 Fixing confirm button spacing

--- a/web/src/style/_buttons.scss
+++ b/web/src/style/_buttons.scss
@@ -40,6 +40,9 @@ a.button:focus {
     }
     &.desktopWebConfirmButton{
       @include webButton;
+      margin-top: 2em;
+    }
+    &.web {
       margin-top: 1em;
     }
 
